add: index.htmld

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="search-button">Buscar</button>
         </div>
         <h1 text align="center">Tienda San Juan</h1>
-        <h2 class="productos-disponibles">Productos Disponibles</h2>
+        <h2 class="productos-disponibles">Articulos Disponibles</h2>
 
         <div id="inventory">
             <div class="product">
@@ -96,7 +96,7 @@
             <div class="product">
                 <img src="images/quetzaltecanaranja.png" alt="Producto 10">
                 <div class="product-info">
-                    <h3>Quetzalteca Naranja</h3>
+                    <h3>Quezalteca Naranja</h3>
                     <p class="product-price">$10</p>
                     <p class="no-disponible">Agotado</p>
                 </div>
@@ -106,7 +106,7 @@
             <div class="product">
                 <img src="images/quetzalteca fresa.jpg" alt="Producto 11">
                 <div class="product-info">
-                    <h3>Quetzalteca Horchata</h3>
+                    <h3>Quezalteca Horchata</h3>
                     <p class="product-price">$10</p>
                     <p class="no-disponible">Agotado</p>
                 </div>
