add: index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="product-info">
                     <h3>Gallo Lata</h3>
                     <p class="product-price">$10.0</p>
-                    <p class="availability">en existencia</p>
+                    <p class="no-disponible">Agotado</p>
                 </div>
             </div>
             <div class="product">
